[tool.poetry]
name = "marge"
version = "0.10.0"
description = "Marge-bot is a merge-bot for GitLab that, beside other goodies, implements [the Not Rocket Science Rule Of Software Engineering](http://graydon2.dreamwidth.org/1597.html)."
license = "BSD-3-Clause"
authors = ["Infrastructure <infrastructure@smarkets.com>"]
readme = "README.md"
repository = "https://github.com/smarkets/marge-bot"
keywords = ["merge request", "gitlab"]

[tool.poetry.dependencies]
python = ">= 3.7, < 4"
ConfigArgParse = "^1.3"
maya = "^0.6"
PyYAML = "^5.4"
requests = "^2.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "*"
pytest-runner = "*"
pytest-flake8 = "*"
pytest-pylint = "*"

[tool.poetry.scripts]
marge = "marge.__main__:run"
"marge.app" = "marge.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
